latex_parser.py: updated notebook with Kretschmann Scalar example
- fixed issue that caused 'basis' to be removed from namespace
- fixed issue that prevented <TRIG>/<NLOG> <LETTER>
- fixed issue with 'duplicate basis symbol' exception
- fixed issue with index ordering inside a nested loop

--- a/Tutorial-LaTeX_SymPy_Conversion.ipynb
+++ b/Tutorial-LaTeX_SymPy_Conversion.ipynb
@@ -274,7 +274,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Example 1 (Contraction)\n",
+    "#### Example 1. [Tensor Contraction](https://en.wikipedia.org/wiki/Tensor_contraction)\n",
     "LaTeX Source | Rendered LaTeX\n",
     ":----------- | :-------------\n",
     "<pre lang=\"latex\"> h = h^\\mu{}_\\mu </pre> | $$ h = h^\\mu{}_\\mu $$"
@@ -324,7 +324,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Example 2 (Index Raising)\n",
+    "#### Example 2. [Raising Tensor Index](https://en.wikipedia.org/wiki/Raising_and_lowering_indices)\n",
     "LaTeX Source | Rendered LaTeX\n",
     ":----------- | :-------------\n",
     "<pre lang=\"latex\"> v^\\mu = g^{\\mu\\nu} v_\\nu </pre> | $$ v^\\mu = g^{\\mu\\nu} v_\\nu $$"
@@ -374,10 +374,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Example 3 (Einstein Tensor)\n",
+    "#### Example 3. [Permutation Symbol](https://en.wikipedia.org/wiki/Levi-Civita_symbol) ([Cross Product](https://en.wikipedia.org/wiki/Cross_product))\n",
     "LaTeX Source | Rendered LaTeX\n",
     ":----------- | :-------------\n",
-    "<pre lang=\"latex\"> \\\\begin{align\\*}<br>&emsp;&emsp;&emsp; R &= g_{ab} R^{ab} \\\\\\\\ <br>&emsp;&emsp;&emsp; G^{ab} &= R^{ab} - \\frac{1}{2}g^{ab}R <br> \\\\end{align\\*} </pre> | $$ \\begin{align*} R &= g_{ab} R^{ab} \\\\ G^{ab} &= R^{ab} - \\frac{1}{2}g^{ab}R \\end{align*} $$"
+    "<pre lang=\"latex\"> u_i = \\epsilon_{ijk} v^j w^k </pre> | $$ u_i = \\epsilon_{ijk} v^j w^k $$"
    ]
   },
   {
@@ -388,87 +388,10 @@
     {
      "data": {
       "text/plain": [
-       "['gUU', 'gdet', 'gDD', 'RUU', 'R', 'GUU']"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "parse(r\"\"\"\n",
-    "    % define metric gDD (2), sym01 RUU (2);\n",
-    "    \\begin{align*}\n",
-    "        R &= g_{ab} R^{ab} \\\\\n",
-    "        G^{ab} &= R^{ab} - \\frac{1}{2}g^{ab}R\n",
-    "    \\end{align*}\n",
-    "\"\"\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "R = RUU00*gDD00 + 2*RUU01*gDD01 + RUU11*gDD11\n"
-     ]
-    }
-   ],
-   "source": [
-    "print('R =', R)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[[RUU00 + gDD11*(-RUU00*gDD00 - 2*RUU01*gDD01 - RUU11*gDD11)/(2*(gDD00*gDD11 - gDD01**2)),\n",
-       "  RUU01 - gDD01*(-RUU00*gDD00 - 2*RUU01*gDD01 - RUU11*gDD11)/(2*(gDD00*gDD11 - gDD01**2))],\n",
-       " [RUU01 - gDD01*(-RUU00*gDD00 - 2*RUU01*gDD01 - RUU11*gDD11)/(2*(gDD00*gDD11 - gDD01**2)),\n",
-       "  RUU11 + gDD00*(-RUU00*gDD00 - 2*RUU01*gDD01 - RUU11*gDD11)/(2*(gDD00*gDD11 - gDD01**2))]]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "display(GUU)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Example 4 (Cross Product)\n",
-    "LaTeX Source | Rendered LaTeX\n",
-    ":----------- | :-------------\n",
-    "<pre lang=\"latex\"> u_i = \\epsilon_{ijk} v^j w^k </pre> | $$ u_i = \\epsilon_{ijk} v^j w^k $$"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
        "['epsilonDDD', 'vU', 'wU', 'uD']"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -483,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -502,10 +425,118 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Example 5 (Schwarzschild Metric)\n",
+    "#### Example 4 (1). [Four Current](https://en.wikipedia.org/wiki/Four-current) ([Covariant Derivative](https://en.wikipedia.org/wiki/Covariant_derivative))\n",
     "LaTeX Source | Rendered LaTeX\n",
     ":----------- | :-------------\n",
-    "<pre lang=\"latex\"> \\\\begin{align\\*}<br>&emsp;&emsp;&emsp; g^{0 0} &= -\\left(1 - \\frac{2GM}{r}\\right) \\\\\\\\ <br>&emsp;&emsp;&emsp; g^{1 1} &=  \\left(1 - \\frac{2GM}{r}\\right)^{-1} \\\\\\\\ <br>&emsp;&emsp;&emsp; g^{2 2} &= r^{{2}} \\\\\\\\ <br>&emsp;&emsp;&emsp; g^{3 3} &= r^{{2}} \\sin^2(\\theta) <br> \\\\end{align\\*} </pre> | $$ \\begin{align*} g^{0 0} &= -\\left(1 - \\frac{2GM}{r}\\right) \\\\ g^{1 1} &= \\left(1 - \\frac{2GM}{r}\\right)^{-1} \\\\ g^{2 2} &= r^{{2}} \\\\ g^{3 3} &= r^{{2}} \\sin^2(\\theta) \\end{align*} $$"
+    "<pre lang=\"latex\"> J^\\mu = (4\\pi k)^{-1} \\nabla_\\nu F^{\\mu\\nu} </pre> | $$ J^\\mu = (4\\pi k)^{-1} \\nabla_\\nu F^{\\mu\\nu} $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The following are contextually inferred, dynamically generated, and injected into the global namespace for expansion of the covariant derivative $\\nabla_\\nu F^{\\mu\\nu}$\n",
+    "$$\n",
+    "\\begin{align*}\n",
+    "    \\Gamma^\\mu_{ba} &= \\frac{1}{2} g^{\\mu c}(\\partial_b\\,g_{a c} + \\partial_a\\,g_{c b} - \\partial_c\\,g_{b a}) \\\\\n",
+    "    \\Gamma^\\nu_{ba} &= \\frac{1}{2} g^{\\nu c}(\\partial_b\\,g_{a c} + \\partial_a\\,g_{c b} - \\partial_c\\,g_{b a}) \\\\\n",
+    "    \\nabla_a F^{\\mu \\nu} &= \\partial_a F^{\\mu \\nu} + \\Gamma^\\mu_{b a} F^{b \\nu} + \\Gamma^\\nu_{b a} F^{\\mu b}\n",
+    "\\end{align*}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# parse(r\"\"\"\n",
+    "#     % define anti01 FUU (4), const k;\n",
+    "#     J^\\mu = (4\\pi k)^{-1} \\nabla_\\nu F^{\\mu\\nu}\n",
+    "# \"\"\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Example 4 (2). Diacritic Support\n",
+    "LaTeX Source | Rendered LaTeX\n",
+    ":----------- | :-------------\n",
+    "<pre lang=\"latex\"> J^\\mu = (4\\pi k)^{-1} \\hat{\\nabla}_\\nu F^{\\mu\\nu} </pre> | $$ J^\\mu = (4\\pi k)^{-1} \\hat{\\nabla}_\\nu F^{\\mu\\nu} $$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# parse(r\"\"\"\n",
+    "#     % define anti01 FUU (4), const k;\n",
+    "#     J^\\mu = (4\\pi k)^{-1} \\hat{\\nabla}_\\nu F^{\\mu\\nu}\n",
+    "# \"\"\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Example 5. [Kretschmann Scalar](https://en.wikipedia.org/wiki/Kretschmann_scalar) ([Schwarzschild Metric](https://en.wikipedia.org/wiki/Schwarzschild_metric))\n",
+    "LaTeX Source | Rendered LaTeX\n",
+    ":----------- | :-------------\n",
+    "<pre><code>% define basis [t, r, \\theta, \\phi];<br>% define metric gDD (4), kronecker deltaDD (4);<br>% define const G, const M;<br>% parse g_{\\mu\\nu} = \\delta_{\\mu\\nu};<br>&#92;begin{align}<br>&emsp;&emsp;&emsp;g_{0 0} &= -\\left(1 - \\frac{2GM}{r}\\right) &#92;&#92;<br>&emsp;&emsp;&emsp;g_{1 1} &=  \\left(1 - \\frac{2GM}{r}\\right)^{-1} &#92;&#92;<br>&emsp;&emsp;&emsp;g_{2 2} &= r^{{2}} &#92;&#92;<br>&emsp;&emsp;&emsp;g_{3 3} &= r^{{2}} \\sin^2\\theta<br>&#92;end{align}<br>% update metric gDD;|$$\n",
+    "% define basis [t, r, \\theta, \\phi];\n",
+    "% define metric gDD (4), kronecker deltaDD (4);\n",
+    "% define const G, const M;\n",
+    "% parse g_{\\mu\\nu} = \\delta_{\\mu\\nu};\n",
+    "\\begin{align}\n",
+    "    g_{0 0} &= -\\left(1 - \\frac{2GM}{r}\\right) \\\\\n",
+    "    g_{1 1} &=  \\left(1 - \\frac{2GM}{r}\\right)^{-1} \\\\\n",
+    "    g_{2 2} &= r^{{2}} \\\\\n",
+    "    g_{3 3} &= r^{{2}} \\sin^2\\theta\n",
+    "\\end{align}\n",
+    "% update metric gDD;\n",
+    "$$\n",
+    "\n",
+    "LaTeX Source | Rendered LaTeX\n",
+    ":----------- | :-------------\n",
+    "<pre><code>&#92;begin{align}<br>&emsp;&emsp;&emsp;R^\\alpha{}_{\\beta\\mu\\nu} &= \\partial_\\mu \\Gamma^\\alpha_{\\beta\\nu} - \\partial_\\nu \\Gamma^\\alpha_{\\beta\\mu} + \\Gamma^\\alpha_{\\mu\\gamma}\\Gamma^\\gamma_{\\beta\\nu} - \\Gamma^\\alpha_{\\nu\\sigma}\\Gamma^\\sigma_{\\beta\\mu} &#92;&#92;<br>&emsp;&emsp;&emsp;R^{\\alpha\\beta\\mu\\nu} &= g^{\\beta a} g^{\\mu b} g^{\\nu c} R^\\alpha_{a b c} &#92;&#92;<br>&emsp;&emsp;&emsp;R_{\\alpha\\beta\\mu\\nu} &= g_{\\alpha a} R^a_{\\beta\\mu\\nu} &#92;&#92;<br>&emsp;&emsp;&emsp;R &= R^{\\alpha\\beta\\mu\\nu} R_{\\alpha\\beta\\mu\\nu}<br>&#92;end{align}</code></pre>|$$\n",
+    "\\begin{align}\n",
+    "    R^\\alpha{}_{\\beta\\mu\\nu} &= \\partial_\\mu \\Gamma^\\alpha_{\\beta\\nu} - \\partial_\\nu \\Gamma^\\alpha_{\\beta\\mu} + \\Gamma^\\alpha_{\\mu\\gamma}\\Gamma^\\gamma_{\\beta\\nu} - \\Gamma^\\alpha_{\\nu\\sigma}\\Gamma^\\sigma_{\\beta\\mu} \\\\\n",
+    "    R^{\\alpha\\beta\\mu\\nu} &= g^{\\beta a} g^{\\mu b} g^{\\nu c} R^\\alpha_{a b c} \\\\\n",
+    "    R_{\\alpha\\beta\\mu\\nu} &= g_{\\alpha a} R^a_{\\beta\\mu\\nu} \\\\\n",
+    "    K &= R^{\\alpha\\beta\\mu\\nu} R_{\\alpha\\beta\\mu\\nu}\n",
+    "\\end{align}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "parse(r\"\"\"\n",
+    "    % define basis [t, r, \\theta, \\phi];\n",
+    "    % define metric gDD (4), kronecker deltaDD (4);\n",
+    "    % define const G, const M;\n",
+    "    % parse g_{\\mu\\nu} = \\delta_{\\mu\\nu};\n",
+    "    \\begin{align}\n",
+    "        g_{0 0} &= -\\left(1 - \\frac{2GM}{r}\\right) \\\\\n",
+    "        g_{1 1} &=  \\left(1 - \\frac{2GM}{r}\\right)^{-1} \\\\\n",
+    "        g_{2 2} &= r^{{2}} \\\\\n",
+    "        g_{3 3} &= r^{{2}} \\sin^2\\theta\n",
+    "    \\end{align}\n",
+    "    % update metric gDD;\n",
+    "    \\begin{align}\n",
+    "        R^\\alpha{}_{\\beta\\mu\\nu} &= \\partial_\\mu \\Gamma^\\alpha_{\\beta\\nu} - \\partial_\\nu \\Gamma^\\alpha_{\\beta\\mu} + \\Gamma^\\alpha_{\\mu\\gamma}\\Gamma^\\gamma_{\\beta\\nu} - \\Gamma^\\alpha_{\\nu\\sigma}\\Gamma^\\sigma_{\\beta\\mu} \\\\\n",
+    "        R^{\\alpha\\beta\\mu\\nu} &= g^{\\beta a} g^{\\mu b} g^{\\nu c} R^\\alpha_{a b c} \\\\\n",
+    "        R_{\\alpha\\beta\\mu\\nu} &= g_{\\alpha a} R^a_{\\beta\\mu\\nu} \\\\\n",
+    "        K &= R^{\\alpha\\beta\\mu\\nu} R_{\\alpha\\beta\\mu\\nu}\n",
+    "    \\end{align}\n",
+    "\"\"\");"
    ]
   },
   {
@@ -515,30 +546,19 @@
    "outputs": [
     {
      "data": {
+      "text/latex": [
+       "$\\displaystyle \\frac{48 G^{2} M^{2}}{r^{6}}$"
+      ],
       "text/plain": [
-       "['gUU', 'gdet', 'gDD', 'deltaDD', 'G', 'M', 'r', 'theta', 'GammaUDD']"
+       "48*G**2*M**2/r**6"
       ]
      },
-     "execution_count": 17,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "parse(r\"\"\"\n",
-    "    % define basis [t, r, \\theta, \\phi];\n",
-    "    % define metric gDD (4), kronecker deltaDD (4);\n",
-    "    % define const G, const M;\n",
-    "    % parse g_{\\mu\\nu} = \\delta_{\\mu\\nu};\n",
-    "    \\begin{align*}\n",
-    "        g_{0 0} &= -\\left(1 - \\frac{2GM}{r}\\right) \\\\\n",
-    "        g_{1 1} &=  \\left(1 - \\frac{2GM}{r}\\right)^{-1} \\\\\n",
-    "        g_{2 2} &= r^{{2}} \\\\\n",
-    "        g_{3 3} &= r^{{2}} \\sin^2(\\theta)\n",
-    "    \\end{align*}\n",
-    "    % update metric gDD;\n",
-    "    \\Gamma^a_{b c} = \\frac{1}{2} g^{a d}(\\partial_b g_{c d} + \\partial_c g_{d b} - \\partial_d g_{b c})\n",
-    "\"\"\")"
+    "display(sp.simplify(K))"
    ]
   },
   {
@@ -601,14 +621,14 @@
     {
      "data": {
       "text/latex": [
-       "$\\displaystyle \\left[\\begin{matrix}- \\frac{G M \\left(\\frac{2 G M}{r} - 1\\right)}{r^{2}} & 0 & 0 & 0\\\\0 & - \\frac{2 G M}{r^{2} \\left(- \\frac{2 G M}{r} + 1\\right)} - \\frac{G M \\left(\\frac{2 G M}{r} - 1\\right)}{r^{2} \\left(- \\frac{2 G M}{r} + 1\\right)^{2}} & 0 & 0\\\\0 & 0 & r \\left(\\frac{2 G M}{r} - 1\\right) & 0\\\\0 & 0 & 0 & r \\left(\\frac{2 G M}{r} - 1\\right) \\sin^{2}{\\left(\\theta \\right)}\\end{matrix}\\right]$"
+       "$\\displaystyle \\left[\\begin{matrix}\\frac{G M \\left(- \\frac{2 G M}{r} + 1\\right)}{r^{2}} & 0 & 0 & 0\\\\0 & - \\frac{G M}{r^{2} \\left(- \\frac{2 G M}{r} + 1\\right)} & 0 & 0\\\\0 & 0 & - r \\left(- \\frac{2 G M}{r} + 1\\right) & 0\\\\0 & 0 & 0 & - r \\left(- \\frac{2 G M}{r} + 1\\right) \\sin^{2}{\\left(\\theta \\right)}\\end{matrix}\\right]$"
       ],
       "text/plain": [
        "Matrix([\n",
-       "[-G*M*(2*G*M/r - 1)/r**2,                                                                         0,               0,                             0],\n",
-       "[                      0, -2*G*M/(r**2*(-2*G*M/r + 1)) - G*M*(2*G*M/r - 1)/(r**2*(-2*G*M/r + 1)**2),               0,                             0],\n",
-       "[                      0,                                                                         0, r*(2*G*M/r - 1),                             0],\n",
-       "[                      0,                                                                         0,               0, r*(2*G*M/r - 1)*sin(theta)**2]])"
+       "[G*M*(-2*G*M/r + 1)/r**2,                          0,                 0,                               0],\n",
+       "[                      0, -G*M/(r**2*(-2*G*M/r + 1)),                 0,                               0],\n",
+       "[                      0,                          0, -r*(-2*G*M/r + 1),                               0],\n",
+       "[                      0,                          0,                 0, -r*(-2*G*M/r + 1)*sin(theta)**2]])"
       ]
      },
      "metadata": {},
@@ -675,70 +695,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Example 6.1 (Covariant Derivative)\n",
-    "LaTeX Source | Rendered LaTeX\n",
-    ":----------- | :-------------\n",
-    "<pre lang=\"latex\"> J^\\mu = (4\\pi k)^{-1} \\nabla_\\nu F^{\\mu\\nu} </pre> | $$ J^\\mu = (4\\pi k)^{-1} \\nabla_\\nu F^{\\mu\\nu} $$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The following are contextually inferred, dynamically generated, and injected into the global namespace for expansion of the covariant derivative $\\nabla_\\nu F^{\\mu\\nu}$\n",
-    "$$\n",
-    "\\begin{align*}\n",
-    "    \\Gamma^\\mu_{ba} &= \\frac{1}{2} g^{\\mu c}(\\partial_b\\,g_{a c} + \\partial_a\\,g_{c b} - \\partial_c\\,g_{b a}) \\\\\n",
-    "    \\Gamma^\\nu_{ba} &= \\frac{1}{2} g^{\\nu c}(\\partial_b\\,g_{a c} + \\partial_a\\,g_{c b} - \\partial_c\\,g_{b a}) \\\\\n",
-    "    \\nabla_a F^{\\mu \\nu} &= \\partial_a F^{\\mu \\nu} + \\Gamma^\\mu_{b a} F^{b \\nu} + \\Gamma^\\nu_{b a} F^{\\mu b}\n",
-    "\\end{align*}\n",
-    "$$"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# parse(r\"\"\"\n",
-    "#     % define anti01 FUU (4), const k;\n",
-    "#     J^\\mu = (4\\pi k)^{-1} \\nabla_\\nu F^{\\mu\\nu}\n",
-    "# \"\"\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Example 6.2 (Diacritic Support)\n",
-    "LaTeX Source | Rendered LaTeX\n",
-    ":----------- | :-------------\n",
-    "<pre lang=\"latex\"> J^\\mu = (4\\pi k)^{-1} \\hat{\\nabla}_\\nu F^{\\mu\\nu} </pre> | $$ J^\\mu = (4\\pi k)^{-1} \\hat{\\nabla}_\\nu F^{\\mu\\nu} $$"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# parse(r\"\"\"\n",
-    "#     % define anti01 FUU (4), const k;\n",
-    "#     J^\\mu = (4\\pi k)^{-1} \\hat{\\nabla}_\\nu F^{\\mu\\nu}\n",
-    "# \"\"\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "The static variable `namespace` for the `Parser` class will provide access to the global namespace of the parser across each instance of the class."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -754,7 +716,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -792,17 +754,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import cmdline_helper as cmd    # NRPy+: Multi-platform Python command-line interface\n",
-    "cmd.output_Jupyter_notebook_to_LaTeXed_PDF(\"Tutorial-LaTeX_SymPy_Conversion\")"
+    "# import cmdline_helper as cmd    # NRPy+: Multi-platform Python command-line interface\n",
+    "# cmd.output_Jupyter_notebook_to_LaTeXed_PDF(\"Tutorial-LaTeX_SymPy_Conversion\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -821,7 +783,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -830,7 +792,7 @@
        "[[-(2*x + 2)/x**2, 0], [-y/(2*x**(5/2)), -1/x**(3/2)]]"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -846,6 +808,40 @@
     "    T_{\\mu\\nu} = (\\partial_\\nu v_\\mu)\\,\\partial^2_x (\\ln(x))\n",
     "\"\"\")\n",
     "TDD"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from latex_parser import *\n",
+    "import sympy as sp\n",
+    "parse(r\"\"\"\n",
+    "    % define basis [\\theta, \\phi];\n",
+    "    % define metric gDD (2), kronecker deltaDD (2);\n",
+    "    % define const r;\n",
+    "    % parse g_{\\mu\\nu} = \\delta_{\\mu\\nu};\n",
+    "    \\begin{align*}\n",
+    "        g_{0 0} &= r^{{2}} \\\\\n",
+    "        g_{1 1} &= r^{{2}} \\sin^2(\\theta)\n",
+    "    \\end{align*}\n",
+    "    % update metric gDD;\n",
+    "    \\begin{align*}\n",
+    "        R^\\alpha_{\\beta\\mu\\nu} &= \\partial_\\mu \\Gamma^\\alpha_{\\beta\\nu} - \\partial_\\nu \\Gamma^\\alpha_{\\beta\\mu} + \\Gamma^\\alpha_{\\mu\\gamma}\\Gamma^\\gamma_{\\beta\\nu} - \\Gamma^\\alpha_{\\nu\\sigma}\\Gamma^\\sigma_{\\beta\\mu} \\\\\n",
+    "        R_{\\alpha\\beta\\mu\\nu} &= g_{\\alpha a} R^a_{\\beta\\mu\\nu} \\\\\n",
+    "        R_{\\beta\\nu} &= R^\\alpha_{\\beta\\alpha\\nu} \\\\\n",
+    "        R &= g^{\\beta\\nu} R_{\\beta\\nu}\n",
+    "    \\end{align*}\n",
+    "\"\"\")\n",
+    "assert GammaUDD[0][1][1] == parse_expr(r'-\\sin(\\theta)\\cos(\\theta)')\n",
+    "assert GammaUDD[1][0][1] == GammaUDD[1][1][0] == parse_expr(r'\\cos(\\theta)/\\sin(\\theta)')\n",
+    "assert RDDDD[0][1][0][1] == -RDDDD[0][1][1][0] == -RDDDD[1][0][0][1] == RDDDD[1][0][1][0] == parse_expr(r'r^{{2}} \\sin^2(\\theta)')\n",
+    "assert RDD[0][0] == 1\n",
+    "assert RDD[1][1] == parse_expr(r'\\sin^2(\\theta)')\n",
+    "assert RDD[0][1] == RDD[1][0] == 0\n",
+    "assert R == parse_expr(r'2/r^{{2}}')"
    ]
   }
  ],
