Tutorial-Start_to_Finish_UnitTest-ShiftedKerrSchild: Removed extra output lines to allow automatic testing.

--- a/in_progress/Tutorial-Start_to_Finish_UnitTest-ShiftedKerrSchild.ipynb
+++ b/in_progress/Tutorial-Start_to_Finish_UnitTest-ShiftedKerrSchild.ipynb
@@ -442,8 +442,6 @@
     "    KerrSchild_radial_shift = r0;\n",
     "    BH_mass = M;\n",
     "    BH_spin = a;\n",
-    "    printf(\"ro,M,a = %.15e,%.15e,%.15e\\n\",r0,M,a);\n",
-    "    printf(\"ro,M,a = %.15e,%.15e,%.15e\\n\",KerrSchild_radial_shift,BH_mass,BH_spin);\n",
     "\n",
     "    // Step 0d.ii: Set up uniform coordinate grids\n",
     "    REAL *xx[3];\n",
@@ -528,8 +526,8 @@
     "                }\n",
     "                //printf(\"NRPy: %.15e,%.15e,%.15e\\n\",auxevol_gfs[IDX4S(BETAU0GF, i0,i1,i2)],auxevol_gfs[IDX4S(BETAU1GF, i0,i1,i2)],auxevol_gfs[IDX4S(BETAU2GF, i0,i1,i2)]);\n",
     "                //printf(\"CCTK: %.15e,%.15e,%.15e\\n\",betax[CCTK_GFINDEX3D(cctkGH,i0,i1,i2)],betay[CCTK_GFINDEX3D(cctkGH,i0,i1,i2)],betaz[CCTK_GFINDEX3D(cctkGH,i0,i1,i2)]);\n",
-    "                printf(\"NRPy: %.15e,%.15e,%.15e\\n\",auxevol_gfs[IDX4S(GAMMADD01GF, i0,i1,i2)],auxevol_gfs[IDX4S(GAMMADD02GF, i0,i1,i2)],auxevol_gfs[IDX4S(GAMMADD12GF, i0,i1,i2)]);\n",
-    "                printf(\"CCTK: %.15e,%.15e,%.15e\\n\",gxy[CCTK_GFINDEX3D(cctkGH,i0,i1,i2)],gxz[CCTK_GFINDEX3D(cctkGH,i0,i1,i2)],gyz[CCTK_GFINDEX3D(cctkGH,i0,i1,i2)]);\n",
+    "                //printf(\"NRPy: %.15e,%.15e,%.15e\\n\",auxevol_gfs[IDX4S(GAMMADD01GF, i0,i1,i2)],auxevol_gfs[IDX4S(GAMMADD02GF, i0,i1,i2)],auxevol_gfs[IDX4S(GAMMADD12GF, i0,i1,i2)]);\n",
+    "                //printf(\"CCTK: %.15e,%.15e,%.15e\\n\",gxy[CCTK_GFINDEX3D(cctkGH,i0,i1,i2)],gxz[CCTK_GFINDEX3D(cctkGH,i0,i1,i2)],gyz[CCTK_GFINDEX3D(cctkGH,i0,i1,i2)]);\n",
     "            }\n",
     "        }\n",
     "    }\n",
@@ -566,11 +564,11 @@
      "text": [
       "Now compiling, should take ~2 seconds...\n",
       "\n",
-      "Finished in 6.5023720264434814 seconds.\n",
+      "Finished in 5.689325332641602 seconds.\n",
       "\n",
       "\n",
       "(EXEC): Executing `cmd /c ShiftedKerrSchild_unit_test `...\n",
-      "(BENCH): Finished executing in 0.44702577590942383 seconds.\n"
+      "(BENCH): Finished executing in 0.24601435661315918 seconds.\n"
      ]
     }
    ],
@@ -609,25 +607,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ro,M,a = 4.000000000000000e-001,1.000000000000000e+000,0.000000000000000e+000\n",
+      "All quantities agree at all points!\n",
       "\n"
-     ]
-    },
-    {
-     "ename": "SystemExit",
-     "evalue": "1",
-     "output_type": "error",
-     "traceback": [
-      "An exception has occurred, use %tb to see the full traceback.\n",
-      "\u001b[1;31mSystemExit\u001b[0m\u001b[1;31m:\u001b[0m 1\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\users\\patrick\\appdata\\local\\programs\\python\\python38-32\\lib\\site-packages\\IPython\\core\\interactiveshell.py:3327: UserWarning: To exit: use 'exit', 'quit', or Ctrl-D.\n",
-      "  warn(\"To exit: use 'exit', 'quit', or Ctrl-D.\", stacklevel=1)\n"
      ]
     }
    ],
@@ -654,9 +635,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "pdflatex: security risk: running with elevated privileges\n",
+      "pdflatex: security risk: running with elevated privileges\n",
+      "pdflatex: security risk: running with elevated privileges\n",
+      "Created Tutorial-Start_to_Finish_UnitTest-GiRaFFEfood_NRPy.tex, and\n",
+      "    compiled LaTeX file to PDF file Tutorial-Start_to_Finish_UnitTest-\n",
+      "    GiRaFFEfood_NRPy.pdf\n"
+     ]
+    }
+   ],
    "source": [
     "import cmdline_helper as cmd    # NRPy+: Multi-platform Python command-line interface\n",
     "cmd.output_Jupyter_notebook_to_LaTeXed_PDF(\"Tutorial-Start_to_Finish_UnitTest-GiRaFFEfood_NRPy\")"
