--- a/in_progress/Tutorial-GiRaFFE_NRPy_Main_Driver_staggered.ipynb
+++ b/in_progress/Tutorial-GiRaFFE_NRPy_Main_Driver_staggered.ipynb
@@ -323,7 +323,7 @@
     "import GiRaFFE_NRPy.Stilde_flux as Sf\n",
     "subdir = \"RHSs\"\n",
     "Sf.generate_C_code_for_Stilde_flux(os.path.join(out_dir,subdir), True, alpha_face,gamma_faceDD,beta_faceU,\n",
-    "                                   Valenciav_rU,B_rU,Valenciav_lU,B_lU,sqrt4pi)"
+    "                                   Valenciav_rU,B_rU,Valenciav_lU,B_lU,sqrt4pi,write_cmax_cmin=True)"
    ]
   },
   {
