Tutorial-LaTeX_Parser_Interface.ipynb: renamed notebook

--- a/Tutorial-LaTeX_Parser_Interface.ipynb
+++ b/Tutorial-LaTeX_Parser_Interface.ipynb
@@ -13,14 +13,14 @@
     "  gtag('config', 'UA-59152712-8');\n",
     "</script>\n",
     "\n",
-    "# Convert LaTeX Sentence to SymPy Expression\n",
+    "# NRPy+ LaTeX Parser Interface\n",
     "\n",
     "## Author: Ken Sible\n",
     "\n",
     "## The following module will demonstrate a recursive descent parser for LaTeX.\n",
     "\n",
     "### NRPy+ Source Code for this module:\n",
-    "1. [latex_parser.py](../edit/latex_parser.py); [\\[**tutorial**\\]](Tutorial-LaTeX_SymPy_Conversion.ipynb) The latex_parser.py script will convert a LaTeX sentence to a SymPy expression using the following function: parse(sentence)."
+    "1. [latex_parser.py](../edit/latex_parser.py); [\\[**tutorial**\\]](Tutorial-LaTeX_Parser_Interface.ipynb) The latex_parser.py script will convert a LaTeX sentence to a SymPy expression using the following function: parse(sentence)."
    ]
   },
   {
@@ -517,8 +517,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from latex_parser import *\n",
+    "import sympy as sp\n",
     "parse(r\"\"\"\n",
-    "    % define metric gDD (4), kronecker deltaDD (4);\n",
+    "    % define kronecker deltaDD (4);\n",
     "    % define const G, const M;\n",
     "    % parse g_{\\mu\\nu} = \\delta_{\\mu\\nu};\n",
     "    \\begin{align}\n",
@@ -527,7 +529,7 @@
     "        g_{2 2} &= r^{{2}} \\\\\n",
     "        g_{3 3} &= r^{{2}} \\sin^2\\theta\n",
     "    \\end{align}\n",
-    "    % update metric gDD\n",
+    "    % assign metric gDD\n",
     "\"\"\");"
    ]
   },
@@ -822,7 +824,7 @@
     "$$\\label{latex_pdf_output}$$\n",
     "\n",
     "The following code cell converts this Jupyter notebook into a proper, clickable $\\LaTeX$-formatted PDF file. After the cell is successfully run, the generated PDF may be found in the root NRPy+ tutorial directory, with filename\n",
-    "[Tutorial-LaTeX_SymPy_Conversion.pdf](Tutorial-LaTeX_SymPy_Conversion.pdf) (Note that clicking on this link may not work; you may need to open the PDF file through another means.)"
+    "[Tutorial-LaTeX_Parser_Interface.pdf](Tutorial-LaTeX_Parser_Interface.pdf) (Note that clicking on this link may not work; you may need to open the PDF file through another means.)"
    ]
   },
   {
@@ -832,7 +834,7 @@
    "outputs": [],
    "source": [
     "import cmdline_helper as cmd    # NRPy+: Multi-platform Python command-line interface\n",
-    "cmd.output_Jupyter_notebook_to_LaTeXed_PDF(\"Tutorial-LaTeX_SymPy_Conversion\")"
+    "cmd.output_Jupyter_notebook_to_LaTeXed_PDF(\"Tutorial-LaTeX_Parser_Interface\")"
    ]
   }
  ],
