Tutorial-GiRaFFE_NRPy-Stilde-flux: Fixed the compiling issue in the new characteristic speed calculation.

--- a/in_progress/Tutorial-GiRaFFE_NRPy-Stilde-flux.ipynb
+++ b/in_progress/Tutorial-GiRaFFE_NRPy-Stilde-flux.ipynb
@@ -352,6 +352,24 @@
     "        B_lU = ixp.register_gridfunctions_for_single_rank1(\"AUXEVOL\",\"B_lU\",DIM=3)\n",
     "        sqrt4pi = par.Cparameters(\"REAL\",thismodule,\"sqrt4pi\",\"sqrt(4.0*M_PI)\")\n",
     "\n",
+    "    global Memory_Read, Memory_Write # This is to satisfy Python's scoping rules to allow us to\n",
+    "                                     # conditionally modify these global values inside the function.\n",
+    "    if write_cmax_cmin:\n",
+    "        # In the staggered case, we will also want to output cmax and cmin\n",
+    "        # If we want to write cmax and cmin, we will need to be able to change auxevol_gfs:\n",
+    "        input_params_for_Stilde_flux = \"const paramstruct *params,REAL *auxevol_gfs,REAL *rhs_gfs\"\n",
+    "        # In the staggered case, we will also want to output cmax and cmin:\n",
+    "        for var in [\"cmax\",\"cmin\"]:\n",
+    "            Memory_Read += \"REAL \"+var+\" = 0;\\n\"\n",
+    "        # Then we will write them to gridfunctions determined by the direction in which we interpolated:\n",
+    "        name_suffixes = [\"_X\",\"_Y\",\"_Z\"]\n",
+    "        for dirn in range(3):\n",
+    "            for var in [\"cmax\",\"cmin\"]:\n",
+    "                Memory_Write[dirn] += \"auxevol_gfs[IDX4S(CMAX\"+name_suffixes[dirn]+\"GF, i0, i1, i2)] = cmax;\\n\"\n",
+    "                Memory_Write[dirn] += \"auxevol_gfs[IDX4S(CMIN\"+name_suffixes[dirn]+\"GF, i0, i1, i2)] = cmin;\\n\"\n",
+    "    else:\n",
+    "        input_params_for_Stilde_flux = \"const paramstruct *params,const REAL *auxevol_gfs,REAL *rhs_gfs\"\n",
+    "\n",
     "    for flux_dirn in range(3):\n",
     "        calculate_Stilde_flux(flux_dirn,alpha_face,gamma_faceDD,beta_faceU,\n",
     "                              Valenciav_rU,B_rU,Valenciav_lU,B_lU,sqrt4pi)\n",
@@ -368,14 +386,13 @@
     "\n",
     "        if write_cmax_cmin:\n",
     "            Stilde_flux_to_print = Stilde_flux_to_print + [chsp.cmax,chsp.cmin]\n",
-    "            name_suffixes = [\"_x\",\"_y\",\"_z\"]\n",
-    "            Stilde_flux_names = Stilde_flux_names + [\"cmax\"+name_suffixes[flux_dirn],\"cmin\"+name_suffixes[flux_dirn]]\n",
+    "            Stilde_flux_names = Stilde_flux_names + [\"cmax\",\"cmin\"]\n",
     "\n",
     "        desc = \"Compute the flux term of all 3 components of tilde{S}_i on the right face in the \" + str(flux_dirn) + \"direction.\"\n",
     "        name = \"calculate_Stilde_flux_D\" + str(flux_dirn)\n",
     "        Ccode_function = outCfunction(\n",
     "            outfile  = \"returnstring\", desc=desc, name=name,\n",
-    "            params   =\"const paramstruct *params,const REAL *auxevol_gfs,REAL *rhs_gfs\",\n",
+    "            params   = input_params_for_Stilde_flux,\n",
     "            body     =  Memory_Read \\\n",
     "                       +outputC(Stilde_flux_to_print,Stilde_flux_names,\"returnstring\",params=outCparams).replace(\"IDX4\",\"IDX4S\")\\\n",
     "                       +Memory_Write[flux_dirn],\n",
