--- a/in_progress/Tutorial-GiRaFFE_NRPy_Main_Driver_staggered.ipynb
+++ b/in_progress/Tutorial-GiRaFFE_NRPy_Main_Driver_staggered.ipynb
@@ -577,31 +577,6 @@
     "    }\n",
     "}\n",
     "\n",
-    "void calculate_GRFFE_characteristic_speeds(const paramstruct *restrict params,\n",
-    "                                           const REAL *alpha, const REAL *betaU2,\n",
-    "                                           const REAL *gammaDD00, const REAL *gammaDD01, const REAL *gammaDD02,\n",
-    "                                           const REAL *gammaDD11, const REAL *gammaDD12, const REAL *gammaDD22,\n",
-    "                                           REAL *cmax_z, REAL *cmin_z) {\n",
-    "#include \"set_Cparameters.h\"\n",
-    "    for(int k=0;k<Nxx_plus_2NGHOSTS2;k++) for(int j=1;j<Nxx_plus_2NGHOSTS1-2;j++) for(int i=1;i<Nxx_plus_2NGHOSTS0-2;i++) {\n",
-    "       const int index = IDX3S(i,j,k);\n",
-    "       const double alpha_face = alpha[index];\n",
-    "       const double beta_faceU2 = betaU2[index];\n",
-    "       const double gamma_faceDD00 = gammaDD00[index];\n",
-    "       const double gamma_faceDD01 = gammaDD01[index];\n",
-    "       const double gamma_faceDD02 = gammaDD02[index];\n",
-    "       const double gamma_faceDD11 = gammaDD11[index];\n",
-    "       const double gamma_faceDD12 = gammaDD12[index];\n",
-    "       const double gamma_faceDD22 = gammaDD22[index];\n",
-    "       const double tmp_3 = ((beta_faceU2)*(beta_faceU2))/((alpha_face)*(alpha_face)*(alpha_face)*(alpha_face));\n",
-    "       const double tmp_4 = (1.0/((alpha_face)*(alpha_face)));\n",
-    "       const double tmp_7 = tmp_4*(((beta_faceU2)*(beta_faceU2))*tmp_4 - (gamma_faceDD00*gamma_faceDD11 - ((gamma_faceDD01)*(gamma_faceDD01)))/(gamma_faceDD00*gamma_faceDD11*gamma_faceDD22 - gamma_faceDD00*((gamma_faceDD12)*(gamma_faceDD12)) - ((gamma_faceDD01)*(gamma_faceDD01))*gamma_faceDD22 + 2*gamma_faceDD01*gamma_faceDD02*gamma_faceDD12 - ((gamma_faceDD02)*(gamma_faceDD02))*gamma_faceDD11));\n",
-    "       const double tmp_8 = ((alpha_face)*(alpha_face))*sqrt(2*tmp_3 - 2*tmp_7 + (1.0/2.0)*fabs(4*tmp_3 - 4*tmp_7));\n",
-    "       cmax_z[index] = -1.0/2.0*beta_faceU2 + (1.0/4.0)*tmp_8 + (1.0/2.0)*fabs(-beta_faceU2 + (1.0/2.0)*tmp_8);\n",
-    "       cmin_z[index] = (1.0/2.0)*beta_faceU2 + (1.0/4.0)*tmp_8 + (1.0/2.0)*fabs(-beta_faceU2 - 1.0/2.0*tmp_8);\n",
-    "    }\n",
-    "}\n",
-    "\n",
     "void GiRaFFE_NRPy_RHSs(const paramstruct *restrict params,REAL *restrict auxevol_gfs,REAL *restrict in_gfs,REAL *restrict rhs_gfs) {\n",
     "#include \"set_Cparameters.h\"\n",
     "    // First thing's first: initialize the RHSs to zero!\n",
@@ -744,13 +719,6 @@
     "  // This function is housed in the file: \"add_fluxes_and_source_terms_to_hydro_rhss.C\"\n",
     "  calculate_StildeD0_source_term(params,auxevol_gfs,rhs_gfs);\n",
     "  calculate_Stilde_flux_D0(params,auxevol_gfs,rhs_gfs);\n",
-    "  // Calculate the characteristic speeds for the upcoming vector potential evolution:\n",
-    "  calculate_GRFFE_characteristic_speeds(params,\n",
-    "                                        auxevol_gfs+Nxxp2NG012*ALPHA_FACEGF,auxevol_gfs+Nxxp2NG012*BETA_FACEU2GF,\n",
-    "                                        auxevol_gfs+Nxxp2NG012*GAMMADD11GF, auxevol_gfs+Nxxp2NG012*GAMMADD12GF,\n",
-    "                                        auxevol_gfs+Nxxp2NG012*GAMMADD01GF, auxevol_gfs+Nxxp2NG012*GAMMADD22GF,\n",
-    "                                        auxevol_gfs+Nxxp2NG012*GAMMADD02GF, auxevol_gfs+Nxxp2NG012*GAMMADD00GF,\n",
-    "                                        auxevol_gfs+Nxxp2NG012*CMAX_XGF, auxevol_gfs+Nxxp2NG012*CMIN_XGF);\n",
     "\n",
     "  // Note that we have already reconstructed vx and vy along the x-direction,\n",
     "  //   at (i-1/2,j,k). That result is stored in v{x,y}{r,l}.  Bx_stagger data\n",
@@ -857,13 +825,6 @@
     "  // This function is housed in the file: \"add_fluxes_and_source_terms_to_hydro_rhss.C\"\n",
     "  calculate_StildeD1_source_term(params,auxevol_gfs,rhs_gfs);\n",
     "  calculate_Stilde_flux_D1(params,auxevol_gfs,rhs_gfs);\n",
-    "  // Calculate the characteristic speeds for the upcoming vector potential evolution:\n",
-    "  calculate_GRFFE_characteristic_speeds(params,\n",
-    "                                        auxevol_gfs+Nxxp2NG012*ALPHA_FACEGF,auxevol_gfs+Nxxp2NG012*BETA_FACEU2GF,\n",
-    "                                        auxevol_gfs+Nxxp2NG012*GAMMADD22GF, auxevol_gfs+Nxxp2NG012*GAMMADD02GF,\n",
-    "                                        auxevol_gfs+Nxxp2NG012*GAMMADD12GF, auxevol_gfs+Nxxp2NG012*GAMMADD00GF,\n",
-    "                                        auxevol_gfs+Nxxp2NG012*GAMMADD01GF, auxevol_gfs+Nxxp2NG012*GAMMADD11GF,\n",
-    "                                        auxevol_gfs+Nxxp2NG012*CMAX_YGF, auxevol_gfs+Nxxp2NG012*CMIN_YGF);\n",
     "\n",
     "  /*****************************************\n",
     "   * COMPUTING RHS OF A_z, BOOKKEEPING NOTE:\n",
@@ -1012,12 +973,6 @@
     "  // This function is housed in the file: \"add_fluxes_and_source_terms_to_hydro_rhss.C\"\n",
     "  calculate_StildeD2_source_term(params,auxevol_gfs,rhs_gfs);\n",
     "  calculate_Stilde_flux_D2(params,auxevol_gfs,rhs_gfs);\n",
-    "  calculate_GRFFE_characteristic_speeds(params,\n",
-    "                                        auxevol_gfs+Nxxp2NG012*ALPHA_FACEGF,auxevol_gfs+Nxxp2NG012*BETA_FACEU2GF,\n",
-    "                                        auxevol_gfs+Nxxp2NG012*GAMMADD00GF, auxevol_gfs+Nxxp2NG012*GAMMADD01GF,\n",
-    "                                        auxevol_gfs+Nxxp2NG012*GAMMADD02GF, auxevol_gfs+Nxxp2NG012*GAMMADD11GF,\n",
-    "                                        auxevol_gfs+Nxxp2NG012*GAMMADD12GF, auxevol_gfs+Nxxp2NG012*GAMMADD22GF,\n",
-    "                                        auxevol_gfs+Nxxp2NG012*CMAX_ZGF, auxevol_gfs+Nxxp2NG012*CMIN_ZGF);\n",
     "\n",
     "  // in_prims[{VYR,VYL,VZR,VZL}].gz_{lo,hi} ghostzones are not set correcty.\n",
     "  //    We fix this below.\n",
@@ -1297,21 +1252,46 @@
       "Checking file RHSs/calculate_StildeD2_source_term.h\n",
       "No difference. TEST PASSED!\n",
       "Checking file RHSs/calculate_Stilde_flux_D0.h\n",
-      "No difference. TEST PASSED!\n",
-      "Checking file RHSs/calculate_Stilde_flux_D1.h\n",
-      "No difference. TEST PASSED!\n",
-      "Checking file RHSs/calculate_Stilde_flux_D2.h\n",
-      "No difference. TEST PASSED!\n",
-      "Checking file A2B/compute_B_and_Bstagger_from_A.h\n",
-      "No difference. TEST PASSED!\n",
-      "Checking file boundary_conditions/GiRaFFE_boundary_conditions.h\n",
-      "No difference. TEST PASSED!\n",
-      "Checking file A2B/compute_B_and_Bstagger_from_A.h\n",
-      "No difference. TEST PASSED!\n",
-      "Checking file C2P/GiRaFFE_NRPy_cons_to_prims.h\n",
-      "No difference. TEST PASSED!\n",
-      "Checking file C2P/GiRaFFE_NRPy_prims_to_cons.h\n",
-      "No difference. TEST PASSED!\n"
+      "--- GiRaFFE_validation_Ccodes\\RHSs/calculate_Stilde_flux_D0.h\n",
+      "+++ GiRaFFE_standalone_Ccodes\\RHSs/calculate_Stilde_flux_D0.h\n",
+      "@@ -33,8 +33,6 @@\n",
+      "                 REAL Stilde_fluxD0 = 0;\n",
+      "                 REAL Stilde_fluxD1 = 0;\n",
+      "                 REAL Stilde_fluxD2 = 0;\n",
+      "-                REAL cmax = 0;\n",
+      "-                REAL cmin = 0;\n",
+      "                 REAL cmax = 0;\n",
+      "                 REAL cmin = 0;\n",
+      "                 {\n",
+      "@@ -175,10 +173,6 @@\n",
+      "                 auxevol_gfs[IDX4S(CMIN_XGF, i0, i1, i2)] = cmin;\n",
+      "                 auxevol_gfs[IDX4S(CMAX_XGF, i0, i1, i2)] = cmax;\n",
+      "                 auxevol_gfs[IDX4S(CMIN_XGF, i0, i1, i2)] = cmin;\n",
+      "-                auxevol_gfs[IDX4S(CMAX_XGF, i0, i1, i2)] = cmax;\n",
+      "-                auxevol_gfs[IDX4S(CMIN_XGF, i0, i1, i2)] = cmin;\n",
+      "-                auxevol_gfs[IDX4S(CMAX_XGF, i0, i1, i2)] = cmax;\n",
+      "-                auxevol_gfs[IDX4S(CMIN_XGF, i0, i1, i2)] = cmin;\n",
+      "                 \n",
+      "             } // END LOOP: for (int i0 = NGHOSTS; i0 < NGHOSTS+Nxx0+1; i0++)\n",
+      "         } // END LOOP: for (int i1 = NGHOSTS; i1 < NGHOSTS+Nxx1+1; i1++)\n",
+      "ERROR: Disagreement found with .py file. See differences above.\n"
+     ]
+    },
+    {
+     "ename": "SystemExit",
+     "evalue": "1",
+     "output_type": "error",
+     "traceback": [
+      "An exception has occurred, use %tb to see the full traceback.\n",
+      "\u001b[1;31mSystemExit\u001b[0m\u001b[1;31m:\u001b[0m 1\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\users\\patrick\\appdata\\local\\programs\\python\\python38-32\\lib\\site-packages\\IPython\\core\\interactiveshell.py:3327: UserWarning: To exit: use 'exit', 'quit', or Ctrl-D.\n",
+      "  warn(\"To exit: use 'exit', 'quit', or Ctrl-D.\", stacklevel=1)\n"
      ]
     }
    ],
@@ -1370,21 +1350,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "pdflatex: security risk: running with elevated privileges\n",
-      "pdflatex: security risk: running with elevated privileges\n",
-      "pdflatex: security risk: running with elevated privileges\n",
-      "Created Tutorial-GiRaFFE_NRPy_Main_Driver.tex, and compiled LaTeX file to\n",
-      "    PDF file Tutorial-GiRaFFE_NRPy_Main_Driver.pdf\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import cmdline_helper as cmd    # NRPy+: Multi-platform Python command-line interface\n",
     "cmd.output_Jupyter_notebook_to_LaTeXed_PDF(\"Tutorial-GiRaFFE_NRPy_Main_Driver\")"
